// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click html after picker header 1`] = `
"<div class=\\"var-date-picker\\">
  <div class=\\"var-date-picker-title\\">
    <div class=\\"var-date-picker-title__year\\">2021</div>
    <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
      <transition-stub>
        <div>05-19 星期三</div>
      </transition-stub>
    </div>
  </div>
  <div class=\\"var-date-picker-body\\">
    <transition-stub>
      <div class=\\"var-month-picker__panel\\">
        <div class=\\"var-month-picker__content\\">
          <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: all 0ms;\\"></i></div>
            </button>
            <div class=\\"var-picker-header__value\\">
              <transition-stub>
                <div>2021</div>
              </transition-stub>
            </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: all 0ms;\\"></i></div>
            </button>
          </div>
          <transition-stub>
            <ul>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">一月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">二月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">三月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">四月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--primary var-elevation--1 var-month-picker__button\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">五月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">六月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">七月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">八月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">九月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十一月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十二月</div>
                </button></li>
            </ul>
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`click html after picker header 2`] = `
"<div class=\\"var-date-picker\\">
  <div class=\\"var-date-picker-title\\">
    <div class=\\"var-date-picker-title__year var-date-picker-title__year--active\\">2021</div>
    <div class=\\"var-date-picker-title__date\\">
      <transition-stub>
        <div>五月</div>
      </transition-stub>
    </div>
  </div>
  <div class=\\"var-date-picker-body\\">
    <transition-stub>
      <ul class=\\"var-year-picker__panel\\">
        <li class=\\"\\">2121</li>
        <li class=\\"\\">2120</li>
        <li class=\\"\\">2119</li>
        <li class=\\"\\">2118</li>
        <li class=\\"\\">2117</li>
        <li class=\\"\\">2116</li>
        <li class=\\"\\">2115</li>
        <li class=\\"\\">2114</li>
        <li class=\\"\\">2113</li>
        <li class=\\"\\">2112</li>
        <li class=\\"\\">2111</li>
        <li class=\\"\\">2110</li>
        <li class=\\"\\">2109</li>
        <li class=\\"\\">2108</li>
        <li class=\\"\\">2107</li>
        <li class=\\"\\">2106</li>
        <li class=\\"\\">2105</li>
        <li class=\\"\\">2104</li>
        <li class=\\"\\">2103</li>
        <li class=\\"\\">2102</li>
        <li class=\\"\\">2101</li>
        <li class=\\"\\">2100</li>
        <li class=\\"\\">2099</li>
        <li class=\\"\\">2098</li>
        <li class=\\"\\">2097</li>
        <li class=\\"\\">2096</li>
        <li class=\\"\\">2095</li>
        <li class=\\"\\">2094</li>
        <li class=\\"\\">2093</li>
        <li class=\\"\\">2092</li>
        <li class=\\"\\">2091</li>
        <li class=\\"\\">2090</li>
        <li class=\\"\\">2089</li>
        <li class=\\"\\">2088</li>
        <li class=\\"\\">2087</li>
        <li class=\\"\\">2086</li>
        <li class=\\"\\">2085</li>
        <li class=\\"\\">2084</li>
        <li class=\\"\\">2083</li>
        <li class=\\"\\">2082</li>
        <li class=\\"\\">2081</li>
        <li class=\\"\\">2080</li>
        <li class=\\"\\">2079</li>
        <li class=\\"\\">2078</li>
        <li class=\\"\\">2077</li>
        <li class=\\"\\">2076</li>
        <li class=\\"\\">2075</li>
        <li class=\\"\\">2074</li>
        <li class=\\"\\">2073</li>
        <li class=\\"\\">2072</li>
        <li class=\\"\\">2071</li>
        <li class=\\"\\">2070</li>
        <li class=\\"\\">2069</li>
        <li class=\\"\\">2068</li>
        <li class=\\"\\">2067</li>
        <li class=\\"\\">2066</li>
        <li class=\\"\\">2065</li>
        <li class=\\"\\">2064</li>
        <li class=\\"\\">2063</li>
        <li class=\\"\\">2062</li>
        <li class=\\"\\">2061</li>
        <li class=\\"\\">2060</li>
        <li class=\\"\\">2059</li>
        <li class=\\"\\">2058</li>
        <li class=\\"\\">2057</li>
        <li class=\\"\\">2056</li>
        <li class=\\"\\">2055</li>
        <li class=\\"\\">2054</li>
        <li class=\\"\\">2053</li>
        <li class=\\"\\">2052</li>
        <li class=\\"\\">2051</li>
        <li class=\\"\\">2050</li>
        <li class=\\"\\">2049</li>
        <li class=\\"\\">2048</li>
        <li class=\\"\\">2047</li>
        <li class=\\"\\">2046</li>
        <li class=\\"\\">2045</li>
        <li class=\\"\\">2044</li>
        <li class=\\"\\">2043</li>
        <li class=\\"\\">2042</li>
        <li class=\\"\\">2041</li>
        <li class=\\"\\">2040</li>
        <li class=\\"\\">2039</li>
        <li class=\\"\\">2038</li>
        <li class=\\"\\">2037</li>
        <li class=\\"\\">2036</li>
        <li class=\\"\\">2035</li>
        <li class=\\"\\">2034</li>
        <li class=\\"\\">2033</li>
        <li class=\\"\\">2032</li>
        <li class=\\"\\">2031</li>
        <li class=\\"\\">2030</li>
        <li class=\\"\\">2029</li>
        <li class=\\"\\">2028</li>
        <li class=\\"\\">2027</li>
        <li class=\\"\\">2026</li>
        <li class=\\"\\">2025</li>
        <li class=\\"\\">2024</li>
        <li class=\\"\\">2023</li>
        <li class=\\"\\">2022</li>
        <li class=\\"var-year-picker__panel--active\\">2021</li>
        <li class=\\"\\">2020</li>
        <li class=\\"\\">2019</li>
        <li class=\\"\\">2018</li>
        <li class=\\"\\">2017</li>
        <li class=\\"\\">2016</li>
        <li class=\\"\\">2015</li>
        <li class=\\"\\">2014</li>
        <li class=\\"\\">2013</li>
        <li class=\\"\\">2012</li>
        <li class=\\"\\">2011</li>
        <li class=\\"\\">2010</li>
        <li class=\\"\\">2009</li>
        <li class=\\"\\">2008</li>
        <li class=\\"\\">2007</li>
        <li class=\\"\\">2006</li>
        <li class=\\"\\">2005</li>
        <li class=\\"\\">2004</li>
        <li class=\\"\\">2003</li>
        <li class=\\"\\">2002</li>
        <li class=\\"\\">2001</li>
        <li class=\\"\\">2000</li>
        <li class=\\"\\">1999</li>
        <li class=\\"\\">1998</li>
        <li class=\\"\\">1997</li>
        <li class=\\"\\">1996</li>
        <li class=\\"\\">1995</li>
        <li class=\\"\\">1994</li>
        <li class=\\"\\">1993</li>
        <li class=\\"\\">1992</li>
        <li class=\\"\\">1991</li>
        <li class=\\"\\">1990</li>
        <li class=\\"\\">1989</li>
        <li class=\\"\\">1988</li>
        <li class=\\"\\">1987</li>
        <li class=\\"\\">1986</li>
        <li class=\\"\\">1985</li>
        <li class=\\"\\">1984</li>
        <li class=\\"\\">1983</li>
        <li class=\\"\\">1982</li>
        <li class=\\"\\">1981</li>
        <li class=\\"\\">1980</li>
        <li class=\\"\\">1979</li>
        <li class=\\"\\">1978</li>
        <li class=\\"\\">1977</li>
        <li class=\\"\\">1976</li>
        <li class=\\"\\">1975</li>
        <li class=\\"\\">1974</li>
        <li class=\\"\\">1973</li>
        <li class=\\"\\">1972</li>
        <li class=\\"\\">1971</li>
        <li class=\\"\\">1970</li>
        <li class=\\"\\">1969</li>
        <li class=\\"\\">1968</li>
        <li class=\\"\\">1967</li>
        <li class=\\"\\">1966</li>
        <li class=\\"\\">1965</li>
        <li class=\\"\\">1964</li>
        <li class=\\"\\">1963</li>
        <li class=\\"\\">1962</li>
        <li class=\\"\\">1961</li>
        <li class=\\"\\">1960</li>
        <li class=\\"\\">1959</li>
        <li class=\\"\\">1958</li>
        <li class=\\"\\">1957</li>
        <li class=\\"\\">1956</li>
        <li class=\\"\\">1955</li>
        <li class=\\"\\">1954</li>
        <li class=\\"\\">1953</li>
        <li class=\\"\\">1952</li>
        <li class=\\"\\">1951</li>
        <li class=\\"\\">1950</li>
        <li class=\\"\\">1949</li>
        <li class=\\"\\">1948</li>
        <li class=\\"\\">1947</li>
        <li class=\\"\\">1946</li>
        <li class=\\"\\">1945</li>
        <li class=\\"\\">1944</li>
        <li class=\\"\\">1943</li>
        <li class=\\"\\">1942</li>
        <li class=\\"\\">1941</li>
        <li class=\\"\\">1940</li>
        <li class=\\"\\">1939</li>
        <li class=\\"\\">1938</li>
        <li class=\\"\\">1937</li>
        <li class=\\"\\">1936</li>
        <li class=\\"\\">1935</li>
        <li class=\\"\\">1934</li>
        <li class=\\"\\">1933</li>
        <li class=\\"\\">1932</li>
        <li class=\\"\\">1931</li>
        <li class=\\"\\">1930</li>
        <li class=\\"\\">1929</li>
        <li class=\\"\\">1928</li>
        <li class=\\"\\">1927</li>
        <li class=\\"\\">1926</li>
        <li class=\\"\\">1925</li>
        <li class=\\"\\">1924</li>
        <li class=\\"\\">1923</li>
        <li class=\\"\\">1922</li>
        <li class=\\"\\">1921</li>
      </ul>
    </transition-stub>
  </div>
</div>"
`;

exports[`click html after picker header 3`] = `
"<div class=\\"var-date-picker\\">
  <div class=\\"var-date-picker-title\\">
    <div class=\\"var-date-picker-title__year\\">2021</div>
    <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
      <transition-stub>
        <div>五月</div>
      </transition-stub>
    </div>
  </div>
  <div class=\\"var-date-picker-body\\">
    <transition-stub>
      <div class=\\"var-month-picker__panel\\">
        <div class=\\"var-month-picker__content\\">
          <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: all 0ms;\\"></i></div>
            </button>
            <div class=\\"var-picker-header__value\\">
              <transition-stub>
                <div>2021</div>
              </transition-stub>
            </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: all 0ms;\\"></i></div>
            </button>
          </div>
          <transition-stub>
            <ul>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">一月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">二月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">三月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">四月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--primary var-elevation--1 var-month-picker__button\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">五月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">六月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">七月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">八月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">九月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十一月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十二月</div>
                </button></li>
            </ul>
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test allowedDates prop 1`] = `
"<div class=\\"var-date-picker\\">
  <div class=\\"var-date-picker-title\\">
    <div class=\\"var-date-picker-title__year\\">2021</div>
    <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
      <transition-stub>
        <div>03-01 星期一</div>
      </transition-stub>
    </div>
  </div>
  <div class=\\"var-date-picker-body\\">
    <transition-stub>
      <div class=\\"var-day-picker__panel\\">
        <div class=\\"var-day-picker__content\\">
          <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: all 0ms;\\"></i></div>
            </button>
            <div class=\\"var-picker-header__value\\">
              <transition-stub>
                <div>2021 三月</div>
              </transition-stub>
            </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: all 0ms;\\"></i></div>
            </button>
          </div>
          <transition-stub>
            <div>
              <ul class=\\"var-day-picker__head\\">
                <li>日</li>
                <li>一</li>
                <li>二</li>
                <li>三</li>
                <li>四</li>
                <li>五</li>
                <li>六</li>
              </ul>
              <ul class=\\"var-day-picker__body\\"></ul>
            </div>
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test datePicker example 1`] = `
"<div>
  <div class=\\"app-type\\">基本使用</div>
  <div class=\\"var-date-picker\\">
    <div class=\\"var-date-picker-title\\">
      <div class=\\"var-date-picker-title__year\\">2021</div>
      <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
        <transition-stub>
          <div>04-08 星期四</div>
        </transition-stub>
      </div>
    </div>
    <div class=\\"var-date-picker-body\\">
      <transition-stub>
        <div class=\\"var-day-picker__panel\\">
          <div class=\\"var-day-picker__content\\">
            <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
                <!--v-if-->
                <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: all 0ms;\\"></i></div>
              </button>
              <div class=\\"var-picker-header__value\\">
                <transition-stub>
                  <div>2021 四月</div>
                </transition-stub>
              </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
                <!--v-if-->
                <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: all 0ms;\\"></i></div>
              </button>
            </div>
            <transition-stub>
              <div>
                <ul class=\\"var-day-picker__head\\">
                  <li>日</li>
                  <li>一</li>
                  <li>二</li>
                  <li>三</li>
                  <li>四</li>
                  <li>五</li>
                  <li>六</li>
                </ul>
                <ul class=\\"var-day-picker__body\\"></ul>
              </div>
            </transition-stub>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
<div>
  <div class=\\"app-type\\">月份选择器</div>
  <div class=\\"var-date-picker var-elevation--2\\">
    <div class=\\"var-date-picker-title\\">
      <div class=\\"var-date-picker-title__year\\">2021</div>
      <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
        <transition-stub>
          <div>一月</div>
        </transition-stub>
      </div>
    </div>
    <div class=\\"var-date-picker-body\\">
      <transition-stub>
        <div class=\\"var-month-picker__panel\\">
          <div class=\\"var-month-picker__content\\">
            <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
                <!--v-if-->
                <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: all 0ms;\\"></i></div>
              </button>
              <div class=\\"var-picker-header__value\\">
                <transition-stub>
                  <div>2021</div>
                </transition-stub>
              </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
                <!--v-if-->
                <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: all 0ms;\\"></i></div>
              </button>
            </div>
            <transition-stub>
              <ul>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--primary var-elevation--1 var-month-picker__button\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">一月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">二月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">三月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">四月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--outline var-month-picker__button\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">五月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">六月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">七月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">八月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">九月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">十月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">十一月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">十二月</div>
                  </button></li>
              </ul>
            </transition-stub>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
<div>
  <div class=\\"app-type\\">多选</div>
  <div class=\\"var-date-picker\\">
    <div class=\\"var-date-picker-title\\">
      <div class=\\"var-date-picker-title__year\\">2021</div>
      <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
        <transition-stub>
          <div>0个被选择</div>
        </transition-stub>
      </div>
    </div>
    <div class=\\"var-date-picker-body\\">
      <transition-stub>
        <div class=\\"var-day-picker__panel\\">
          <div class=\\"var-day-picker__content\\">
            <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
                <!--v-if-->
                <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: all 0ms;\\"></i></div>
              </button>
              <div class=\\"var-picker-header__value\\">
                <transition-stub>
                  <div>2021 五月</div>
                </transition-stub>
              </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
                <!--v-if-->
                <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: all 0ms;\\"></i></div>
              </button>
            </div>
            <transition-stub>
              <div>
                <ul class=\\"var-day-picker__head\\">
                  <li>日</li>
                  <li>一</li>
                  <li>二</li>
                  <li>三</li>
                  <li>四</li>
                  <li>五</li>
                  <li>六</li>
                </ul>
                <ul class=\\"var-day-picker__body\\"></ul>
              </div>
            </transition-stub>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
<div>
  <div class=\\"app-type\\">选择范围</div>
  <div class=\\"var-date-picker\\">
    <div class=\\"var-date-picker-title\\">
      <div class=\\"var-date-picker-title__year\\">2021</div>
      <div class=\\"var-date-picker-title__date var-date-picker-title__date--active var-date-picker-title__date--range\\">
        <transition-stub>
          <div>2021-02-01 ~ 2021-02-15</div>
        </transition-stub>
      </div>
    </div>
    <div class=\\"var-date-picker-body\\">
      <transition-stub>
        <div class=\\"var-day-picker__panel\\">
          <div class=\\"var-day-picker__content\\">
            <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
                <!--v-if-->
                <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: all 0ms;\\"></i></div>
              </button>
              <div class=\\"var-picker-header__value\\">
                <transition-stub>
                  <div>2021 五月</div>
                </transition-stub>
              </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
                <!--v-if-->
                <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: all 0ms;\\"></i></div>
              </button>
            </div>
            <transition-stub>
              <div>
                <ul class=\\"var-day-picker__head\\">
                  <li>日</li>
                  <li>一</li>
                  <li>二</li>
                  <li>三</li>
                  <li>四</li>
                  <li>五</li>
                  <li>六</li>
                </ul>
                <ul class=\\"var-day-picker__body\\"></ul>
              </div>
            </transition-stub>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
<div>
  <div class=\\"app-type\\">日期限制</div>
  <div class=\\"var-date-picker\\">
    <div class=\\"var-date-picker-title\\">
      <div class=\\"var-date-picker-title__year\\">2020</div>
      <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
        <transition-stub>
          <div>11-11 星期三</div>
        </transition-stub>
      </div>
    </div>
    <div class=\\"var-date-picker-body\\">
      <transition-stub>
        <div class=\\"var-day-picker__panel\\">
          <div class=\\"var-day-picker__content\\">
            <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
                <!--v-if-->
                <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: all 0ms;\\"></i></div>
              </button>
              <div class=\\"var-picker-header__value\\">
                <transition-stub>
                  <div>2020 十一月</div>
                </transition-stub>
              </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
                <!--v-if-->
                <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: all 0ms;\\"></i></div>
              </button>
            </div>
            <transition-stub>
              <div>
                <ul class=\\"var-day-picker__head\\">
                  <li>日</li>
                  <li>一</li>
                  <li>二</li>
                  <li>三</li>
                  <li>四</li>
                  <li>五</li>
                  <li>六</li>
                </ul>
                <ul class=\\"var-day-picker__body\\"></ul>
              </div>
            </transition-stub>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
<div style=\\"padding-bottom: 20px;\\">
  <div class=\\"app-type\\">自定义</div>
  <div class=\\"var-date-picker var-elevation--2\\">
    <div class=\\"var-date-picker-title\\" style=\\"background: purple;\\">
      <div class=\\"var-date-picker-title__year\\"><span>2021年</span></div>
      <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
        <transition-stub>
          <div><span>2021年02月</span></div>
        </transition-stub>
      </div>
    </div>
    <div class=\\"var-date-picker-body\\">
      <transition-stub>
        <div class=\\"var-month-picker__panel\\">
          <div class=\\"var-month-picker__content\\">
            <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
                <!--v-if-->
                <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: all 0ms;\\"></i></div>
              </button>
              <div class=\\"var-picker-header__value\\">
                <transition-stub>
                  <div>2021</div>
                </transition-stub>
              </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
                <!--v-if-->
                <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: all 0ms;\\"></i></div>
              </button>
            </div>
            <transition-stub>
              <ul>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">一月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--disabled var-button--text-primary var-button--text var-button--text-disabled var-month-picker__button\\" disabled=\\"\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">二月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">三月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--disabled var-button--text-primary var-button--text var-button--text-disabled var-month-picker__button\\" disabled=\\"\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">四月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--outline var-month-picker__button\\" style=\\"color: rgb(123, 184, 114);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">五月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--disabled var-button--text-primary var-button--text var-button--text-disabled var-month-picker__button\\" disabled=\\"\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">六月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">七月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--disabled var-button--text-primary var-button--text var-button--text-disabled var-month-picker__button\\" disabled=\\"\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">八月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">九月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--disabled var-button--text-primary var-button--text var-button--text-disabled var-month-picker__button\\" disabled=\\"\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">十月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">十一月</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--disabled var-button--text-primary var-button--text var-button--text-disabled var-month-picker__button\\" disabled=\\"\\" var-month-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">十二月</div>
                  </button></li>
              </ul>
            </transition-stub>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>"
`;

exports[`test datePicker style and type 1`] = `
"<div class=\\"var-date-picker var-elevation--2\\">
  <div class=\\"var-date-picker-title\\" style=\\"background: purple;\\">
    <div class=\\"var-date-picker-title__year\\">2021</div>
    <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
      <transition-stub>
        <div>五月</div>
      </transition-stub>
    </div>
  </div>
  <div class=\\"var-date-picker-body\\">
    <transition-stub>
      <div class=\\"var-month-picker__panel\\">
        <div class=\\"var-month-picker__content\\">
          <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: all 0ms;\\"></i></div>
            </button>
            <div class=\\"var-picker-header__value\\">
              <transition-stub>
                <div>2021</div>
              </transition-stub>
            </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: all 0ms;\\"></i></div>
            </button>
          </div>
          <transition-stub>
            <ul>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">一月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">二月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">三月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">四月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--primary var-elevation--1 var-month-picker__button\\" style=\\"background: rgb(123, 184, 114);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">五月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">六月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">七月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">八月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">九月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十一月</div>
                </button></li>
              <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-month-picker__button\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-month-picker-cover=\\"\\">
                  <!--v-if-->
                  <div class=\\"var-button__content\\">十二月</div>
                </button></li>
            </ul>
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test datePicker style and type 2`] = `
"<div class=\\"var-date-picker var-elevation--2\\">
  <div class=\\"var-date-picker-title\\" style=\\"background: purple;\\">
    <div class=\\"var-date-picker-title__year\\">2021</div>
    <div class=\\"var-date-picker-title__date var-date-picker-title__date--active\\">
      <transition-stub>
        <div>05-19 星期三</div>
      </transition-stub>
    </div>
  </div>
  <div class=\\"var-date-picker-body\\">
    <transition-stub>
      <div class=\\"var-day-picker__panel\\">
        <div class=\\"var-day-picker__content\\">
          <div class=\\"var-picker-header\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-left\\" style=\\"transition: all 0ms;\\"></i></div>
            </button>
            <div class=\\"var-picker-header__value\\">
              <transition-stub>
                <div>2021 五月</div>
              </transition-stub>
            </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-default var-button--text var-button--round\\" style=\\"color: rgba(0, 0, 0, 0.54);\\">
              <!--v-if-->
              <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-chevron-right\\" style=\\"transition: all 0ms;\\"></i></div>
            </button>
          </div>
          <transition-stub>
            <div>
              <ul class=\\"var-day-picker__head\\">
                <li>日</li>
                <li>一</li>
                <li>二</li>
                <li>三</li>
                <li>四</li>
                <li>五</li>
                <li>六</li>
              </ul>
              <ul class=\\"var-day-picker__body\\">
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\"></div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">1</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">2</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">3</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">4</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">5</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">6</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">7</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">8</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">9</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">10</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">11</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">12</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">13</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">14</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">15</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">16</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">17</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">18</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--primary var-elevation--1 var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"background: rgb(123, 184, 114);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">19</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">20</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">21</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">22</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">23</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">24</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">25</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-button--outline var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgb(123, 184, 114);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">26</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">27</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">28</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">29</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">30</div>
                  </button></li>
                <li><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-primary var-button--text var-button--round var-day-picker__button var-day-picker__button--usable\\" style=\\"color: rgba(0, 0, 0, 0.87);\\" var-day-picker-cover=\\"\\">
                    <!--v-if-->
                    <div class=\\"var-button__content\\">31</div>
                  </button></li>
              </ul>
            </div>
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;
